# SimpleZNSDevice

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  setup_deps.sh
.github/: pull_request_template.md
cmake/: FindSPDK.cmake  LinkSPDK.cmake
docs/: Doxyfile.in  annotated.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDBuffer-members.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDBuffer.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDChannel-members.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDChannel.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDChannelFactory-members.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDChannelFactory.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDCircularLog-members.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDCircularLog.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDCircularLog__inherit__graph.map  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDCircularLog__inherit__graph.md5  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDDevice-members.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDDevice.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDFragmentedLog-members.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDFragmentedLog.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDLog-members.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDLog.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDLog__inherit__graph.map  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDLog__inherit__graph.md5  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDOnceLog-members.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDOnceLog.html  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDOnceLog__coll__graph.map  classSIMPLE__ZNS__DEVICE__NAMESPACE_1_1SZDOnceLog__inherit__graph.md5  classes.html  dir_000002_000003.html  dir_000004_000002.html  dir_000005_000001.html  dir_000005_000002.html  dir_000006_000001.html  dir_000006_000008.html  dir_000007_000001.html  dir_000007_000008.html  dir_000008_000001.html  dir_000008_000009.html  dir_000009_000001.html  dir_000009_000010.html  dir_000010_000001.html  dir_000010_000007.html  dir_000011_000001.html  (+197 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  (+4 more)
include/: device.h  szd.h  szd_channel.h  szd_namespace.h  szd_utils.h
include/szd/: szd.h  szd_errno.h  szd_namespace.h  szd_status_code.h  szd_utils.h
include/szd/cpp/: szd_channel.h  szd_channel.hpp  szd_channel_factory.h  szd_channel_factory.hpp  szd_device.h  szd_device.hpp  szd_status.h  szd_status.hpp
include/szd/cpp/datastructures/: szd_buffer.h  szd_buffer.hpp  szd_circular_log.h  szd_circular_log.hpp  szd_log.h  szd_log.hpp  szd_once_log.h  szd_once_log.hpp
scripts/: check_format.sh  spdk_bind.sh  spdk_unbind.sh
src/: szd.c  szd.cpp  szd_channel.cpp  szd_errno.cpp  szd_status_code.c  szd_status_code.cpp
src/cpp/: szd_channel.cpp  szd_channel_factory.cpp  szd_device.cpp  szd_status.cpp
src/cpp/datastructures/: szd_buffer.cpp  szd_circular_log.cpp  szd_log.cpp  szd_once_log.cpp
szd/core/include/szd/: szd.h  szd_ioctl.h  szd_iouring.h  szd_spdk.h  szd_status_code.h
szd/core/src/: szd.c  szd_ioctl.c  szd_iouring.c  szd_spdk.c  szd_status_code.c
szd/core/tests/: szd_full_path_test.c  szd_full_path_test_writes.c
szd/cpp/include/szd/: szd_channel.hpp  szd_channel_factory.hpp  szd_device.hpp  szd_status.hpp
szd/cpp/include/szd/datastructures/: szd_buffer.hpp  szd_circular_log.hpp  szd_fragmented_log.hpp  szd_freezone_list.hpp  szd_log.hpp  szd_once_log.hpp
szd/cpp/src/: szd_channel.cpp  szd_channel_factory.cpp  szd_device.cpp  szd_status.cpp
szd/cpp/src/datastructures/: szd_buffer.cpp  szd_circular_log.cpp  szd_fragmented_log.cpp  szd_freezone_list.cpp  szd_log.cpp  szd_once_log.cpp
szd/cpp/tests/: szd_channel_test.cpp  szd_circular_log_test.cpp  szd_device_test.cpp  szd_fragmented_log_test.cpp  szd_once_log_test.cpp  szd_test_util.hpp
tests/: device_initial_test.cpp  szd_full_path_test.c
tests/cpp/: szd_channel_test.cpp  szd_circular_log_test.cpp  szd_device_test.cpp  szd_once_log_test.cpp  szd_test_util.h  szd_test_util.hpp
tools/: znscli.cpp
tools/reset_perf/: CMakeLists.txt  reset_perf.cc
tools/szdcli/: CMakeLists.txt  szdcli.c  szdcli.cpp
